等待方式1